<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/sclogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/socialcampuslogo"
                android:src="@drawable/sclogo" />

          <LinearLayout
              android:layout_width="0dp"
              android:layout_weight="1"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:layout_gravity="center"

              >

              <custom_font.MyTextView
                  android:id="@+id/signin1"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="right"
                  android:gravity="end"
                  android:text="@string/logg_innR"
                  android:textColor="#2C3646"
                  android:textSize="16sp" />
              <LinearLayout
                  android:layout_width="39dp"
                  android:layout_height="1.5dp"
                  android:background="#2C3646"
                  android:layout_gravity="end"
                  android:layout_marginTop="2dp"

                  />

          </LinearLayout>
        </LinearLayout>


        <custom_font.MyTextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/lag_ny_konto"
            android:textColor="#00051f"
            android:textSize="17sp"

            />


        <custom_font.MyEditText
            android:id="@+id/brukernavnR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:background="#00000000"
            android:hint="@string/brukernavnR"
            android:inputType="text"

            android:textColorHint="#a9b0c3"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#a9b0c3"
            android:layout_marginTop="10dp"

            />


        <custom_font.MyEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="#00000000"
            android:hint="@string/epost"
            android:inputType="text"
            android:textColorHint="#a9b0c3"

            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#a9b0c3"
            android:layout_marginTop="10dp"
            />

        <custom_font.MyEditText
            android:id="@+id/passordR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="#00000000"
            android:hint="@string/passordR"
            android:inputType="textPassword"
            android:textColorHint="#a9b0c3"

            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#a9b0c3"
            android:layout_marginTop="10dp"
            />


        <custom_font.MyTextView
            android:id="@+id/signupbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:background="@drawable/round"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/registrer_deg"
            android:textColor="#CBD1DC"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>
